# synology-share-downloader

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  app.py  build.bat  build.py  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
docs/: USAGE.md
scripts/: make_icon.py
synology_share_downloader/: __init__.py  __main__.py  about.py  client.py  gui.py  icon_data.py  util.py
tests/: test_client.py  test_util.py
